Backend/src/main/java/Reservista/example/Backend/Error/RegistrationCredentialsException.java
package Reservista.example.Backend.Error;

public class RegistrationCredentialsException extends Exception{

    public RegistrationCredentialsException(String message){
        super(message);
    }

}
